--- a/app/views/users/_connected_users_modal.html.erb
+++ b/app/views/users/_connected_users_modal.html.erb
@@ -2,6 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
+        <%# if user == current_user %>
         <h5 class="modal-title" id="backdropLabel">
           <%= user.username %>'s <%= description %>
           
@@ -9,7 +10,7 @@
             <%= connected_users.size %>
           </span>
         </h5>
-
+        <%# end %>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
